# Petcher_tag_rec_system

./: .env_example  .gitignore  pyproject.toml  start_app.py
config_data/: config.py
notebooks/: Notebook.ipynb
pipelines/: data_preprocessig.py  getting_tags.py
steps/: cleaning_data.py  getting_similar_tags.py  ingest_data.py  save_data.py
